# rile

./: .containerignore  .gitignore  .gitmessage  .goreleaser.yaml  .release-tools.env  .woodpecker.yml  AGENTS.md  Cargo.toml  ChangeLog  Containerfile.dev  Containerfile.visual  Makefile  NEWS  NOTICE.md  README.md  deny.toml  rust-toolchain.toml
demos/: movement.tape  open-edit-save.tape  resize.tape  search.tape  split-pane.tape
docs/: README.md  architecture-improvement-ideas.md  architecture-improvement-plan.md  architecture.md  auto-save-research.md  backups-and-auto-save.md  completion-regex-removal-plan.md  development.md  emacs-behavior-reference-plan.md  emacs-function-reference.md  external-projects.md  kg-emacs-gap-plan.md  performance.md  pty-vt100-visual-testing-plan.md  query-replace-regexp-plan.md  reference-testing.md  regexp-engine-comparison.md  release-checklist.md  self-documentation-architecture-plan.md  self-documentation.md  testing.md
plans/: file-identity-and-save-conflicts.md  syntax-rendering-follow-ups.md
scripts/: audit  build  devshell  fmt  fmt-check  in-container  lint  release-in-container  run  snapshot-test  test  test-cargo  tools  unused-deps  verify  visual-demos  visual-frames
src/: app.rs  buffers.rs  command.rs  completion.rs  config.rs  editor.rs  error.rs  file.rs  input.rs  keymap.rs  lib.rs  main.rs  matching.rs  minibuffer.rs  mode.rs  option.rs  search_pattern.rs  shell.rs  syntax.rs  text.rs  window.rs
tests/: cli_security.rs  pty_completion.rs  pty_harness.rs  pty_insert.rs  pty_movement.rs  pty_open.rs  (+10 more)
(+197 files in other folders)
