# SPDX-FileCopyrightText: 2026 Rile contributors
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "rile"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A small UTF-8-capable terminal Emacs-style editor."
readme = "README.md"

[dependencies]
libc = "0.2"
unicode-segmentation = "1.12"
unicode-width = "0.2"
