# SPDX-FileCopyrightText: 2026 Robert Charusta <rch-public@posteo.net>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "rile"
version = "0.9.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A small UTF-8-capable terminal Emacs-style editor."
readme = "README.md"
repository = "https://codeberg.org/rch/rile"

[dependencies]
libc = "0.2"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
expectrl = "0.9"
insta = "1"
predicates = "3"
tempfile = "3"
vt100 = "0.16"
